Sternentor: watery sounds, fix key tags, always dark, mix plc placements

--- a/mod/area/castletimra.git.yml
+++ b/mod/area/castletimra.git.yml
@@ -253,7 +253,7 @@ Door List:
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: solace2i}
+    KeyName: {type: :cexostr, value: key_solace2i}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: solace2i2_2_to_sloace2i2_1}
     LinkedToFlags: {type: :byte, value: 1}
@@ -316,7 +316,7 @@ Door List:
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: solace2i}
+    KeyName: {type: :cexostr, value: key_solace2i}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: solace2i1_1_to_sloace2i1_2}
     LinkedToFlags: {type: :byte, value: 1}
@@ -380,7 +380,7 @@ Door List:
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: solace2i}
+    KeyName: {type: :cexostr, value: key_solace2i}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: solace2_to_solace2i3}
     LinkedToFlags: {type: :byte, value: 1}
@@ -634,7 +634,7 @@ Door List:
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: key_solace2}
+    KeyName: {type: :cexostr, value: key_solace2i}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: solace2_to_solace2i2}
     LinkedToFlags: {type: :byte, value: 1}
