--- a/mod/area/sumpf_turm.are.yml
+++ b/mod/area/sumpf_turm.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: Sumpf - Ein Turm
+    0: Arnwald - Turm in Wald - UG
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_cave}
 OnExit: {type: :resref, value: _area_leave}
@@ -48,46 +48,42 @@ Tile_List:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 72}
+    Tile_ID: {type: :int, value: 59}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 41}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 71}
+    Tile_ID: {type: :int, value: 74}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
-    Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 67}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 2}
-    Tile_SrcLight1: {type: :byte, value: 2}
-    Tile_SrcLight2: {type: :byte, value: 2}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -100,7 +96,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -113,7 +108,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -126,7 +120,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -139,7 +132,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -152,7 +144,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -165,7 +156,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -178,7 +168,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -191,7 +180,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -204,7 +192,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -217,7 +204,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -230,7 +216,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -243,7 +228,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 0}
     Tile_AnimLoop2: {type: :byte, value: 0}
