module.ifo: Description

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -39,7 +39,7 @@ Mod_DawnHour: {type: :byte, value: 8}
 Mod_Description: 
   type: :cexolocstr
   value: 
-    4: ""
+    0: "www.silbermarken.de fuer generelle Informationen, benoetigte Dateien, und das Spieler-Passwort."
 Mod_DuskHour: {type: :byte, value: 16}
 Mod_Entry_Area: {type: :resref, value: area043}
 Mod_Entry_Dir_X: {type: :float, value: 0.0}
