Gabel SW<->W: small alley lefthand side at the wall

--- a/mod/area/gabel_west.git.yml
+++ b/mod/area/gabel_west.git.yml
@@ -4514,6 +4514,67 @@ Door List:
     X: {type: :float, value: 96.0}
     Y: {type: :float, value: 56.8}
     Z: {type: :float, value: 0.2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 1.5708}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    GenericType_New: {type: :dword, value: 0}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: xyz}
+    KeyRequired: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: ""}
+    LinkedToFlags: {type: :byte, value: 0}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: "Haust\xFCr (unbreakable)"
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 1}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
+    PortraitId: {type: :word, value: 558}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: Haustrunbreakable}
+    TemplateResRef: {type: :resref, value: door_unbreak}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 52.75}
+    Y: {type: :float, value: 1.7}
+    Z: {type: :float, value: 0.2}
 Encounter List: 
   type: :list
   value: []
@@ -21982,9 +22043,9 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 57.5704}
-    Y: {type: :float, value: 8.0614}
-    Z: {type: :float, value: 0.2}
+    X: {type: :float, value: 61.6486}
+    Y: {type: :float, value: 11.5606}
+    Z: {type: :float, value: 0.0013}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -23139,6 +23200,68 @@ TriggerList:
     YPosition: {type: :float, value: 99.8353}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -0.0318069458007812}
+        PointY: {type: :float, value: 1.41688704490662}
+        PointZ: {type: :float, value: 0.224999815225601}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.224999815225601}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 2.72953033447266}
+        PointY: {type: :float, value: 0.048680305480957}
+        PointZ: {type: :float, value: 0.224999815225601}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 2.72156524658203}
+        PointY: {type: :float, value: 1.24307155609131}
+        PointZ: {type: :float, value: 0.224999815225601}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_gabel_sw_2_gabel_w_alley0}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: 
+        0: New Area Transition
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: gabel_w_2_gabel_sw_alley0}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 53.3035}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 0.0194}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 VarTable: 
   type: :list
   value: 
@@ -23689,4 +23812,29 @@ WaypointList:
     XPosition: {type: :float, value: 54.4935}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 98.9681}
+    ZPosition: {type: :float, value: 0.225}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_gabel_w_2_gabel_sw_alley0}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 54.6524}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 0.7278}
     ZPosition: {type: :float, value: 0.225}
